# KillerGameBot

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  env.env.sample  pyproject.toml  requirements.txt
src/: bot.py  env.py  main.py  rooms.py
src/handlers/: __init__.py  game.py  join.py  start.py
src/libs/: __init__.py  commands.py  room.py  states.py  text.py  user.py
